<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_aplicativo_lista_vip_curso_android"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/txt_hint_edit_sobrenome" />

    <EditText
        android:id="@+id/contactInput"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_de_contato"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerCurso"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:spinnerMode="dropdown" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp">

    <Button
        android:id="@+id/button_Limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
        android:backgroundTint="#1E76CE"
            android:text="@string/btn_limpar" />

    <Button
        android:id="@+id/button_Salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E76CE"
            android:text="@string/btn_salvar" />
    </LinearLayout>

    <Button
        android:id="@+id/button_Finalizar"
        android:layout_width="309dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#1E76CE"
        android:text="@string/btn_finalizar" />


</LinearLayout>